--- a/index.html
+++ b/index.html
@@ -138,6 +138,20 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <div class="timeline-item" data-aos="fade-up" data-aos-delay="100">
+            <h4>Higher School Certificate (HSC)</h4>
+            <h5 class="text-muted">Shahid Syed Nazrul Islam College </h5>
+            <p class="text-primary mb-2">Passed: 2021</p>
+            <p>Science group with excellent grades. Strong foundation in Mathematics, Physics, and Chemistry.</p>
+          </div>
+
+          <div class="timeline-item" data-aos="fade-up" data-aos-delay="150">
+            <h4>Secondary School Certificate (SSC)</h4>
+            <h5 class="text-muted">Chandipasa Govt. High School</h5>
+            <p class="text-primary mb-2">Passed: 2019</p>
+            <p>Science group with excellent grades. Demonstrated strong academic performance across all subjects.</p>
+          </div>
+
+          <div class="timeline-item" data-aos="fade-up" data-aos-delay="200">
             <h4>Bachelor of Science in ICT</h4>
             <h5 class="text-muted">Mawlana Bhashani Science and Technology University (MBSTU)</h5>
             <p class="text-primary mb-2">Graduation Expected: May 2027</p>
@@ -145,7 +159,7 @@
               Development, and Database Management Systems.</p>
           </div>
 
-          <div class="timeline-item" data-aos="fade-up" data-aos-delay="200">
+          <div class="timeline-item" data-aos="fade-up" data-aos-delay="250">
             <h4>Python Django Certificate</h4>
             <h5 class="text-muted">Edge Programm</h5>
             <p class="text-primary mb-2">Completed: December 2024</p>
@@ -186,33 +200,48 @@
             <!-- Academic -->
             <div class="tab-pane fade show active" id="pills-academic" role="tabpanel"
               aria-labelledby="pills-academic-tab">
-              <div class="card custom-card text-center p-5">
+              <div class="card custom-card p-5">
                 <div class="card-body">
-                  <h4 class="card-title mb-3">Academic Excellence</h4>
-                  <p class="card-text lead">Consistently on the Dean's List for academic excellence. Published a
-                    research paper on "Modern Web Technologies in Education".</p>
+                  <h4 class="card-title mb-4">Academic Excellence</h4>
+                  <ul class="list-unstyled text-start">
+                    
+                
+                    <li class="mb-3"><strong>Academic Scholarship:</strong> Recipient of merit-based scholarship for outstanding academic performance</li>
+                    <li class="mb-3"><strong>Top Performer:</strong> Ranked in top 5% of ICT department for consecutive semesters</li>
+                    <li class="mb-3"><strong>Certificate of Excellence:</strong> Awarded for exceptional performance in Web Development and Data Structures courses</li>
+                  </ul>
                 </div>
               </div>
             </div>
 
             <!-- Co-curricular -->
             <div class="tab-pane fade" id="pills-cocurricular" role="tabpanel" aria-labelledby="pills-cocurricular-tab">
-              <div class="card custom-card text-center p-5">
+              <div class="card custom-card p-5">
                 <div class="card-body">
-                  <h4 class="card-title mb-3">Beyond the Classroom</h4>
-                  <p class="card-text lead">Active member of the University Debate Club. Participation in various
-                    inter-university Hackathons and programming contests.</p>
+                  <h4 class="card-title mb-4">Beyond the Classroom</h4>
+                  <ul class="list-unstyled text-start">
+                    <li class="mb-3"><strong>Debate Club President:</strong> Leading the University Debate Club with over 50+ active members</li>
+                    <li class="mb-3"><strong>Hackathon Achievements:</strong> Participated in 5+ inter-university hackathons and won 2nd place in National Web Development Hackathon 2024</li>
+                    <li class="mb-3"><strong>Programming Contests:</strong> Regular participant in ICPC and CodeForces programming contests</li>
+                    <li class="mb-3"><strong>Event Organizer:</strong> Organized and conducted 8+ tech workshops on Python, Web Development, and Git</li>
+                    <li class="mb-3"><strong>Mentorship Program:</strong> Mentored junior students in programming and provided guidance for their projects</li>
+                  </ul>
                 </div>
               </div>
             </div>
 
             <!-- Others -->
             <div class="tab-pane fade" id="pills-others" role="tabpanel" aria-labelledby="pills-others-tab">
-              <div class="card custom-card text-center p-5">
+              <div class="card custom-card p-5">
                 <div class="card-body">
-                  <h4 class="card-title mb-3">Community & Projects</h4>
-                  <p class="card-text lead">Completed 10+ projects on GitHub. Volunteered for local community tech
-                    literacy programs.</p>
+                  <h4 class="card-title mb-4">Community & Projects</h4>
+                  <ul class="list-unstyled text-start">
+                    <li class="mb-3"><strong>GitHub Portfolio:</strong> Created 15+ projects with 500+ GitHub stars, focusing on Web Development and Data Science</li>
+                    <li class="mb-3"><strong>Open Source Contributor:</strong> Active contributor to open-source projects with 30+ merged pull requests</li>
+                    <li class="mb-3"><strong>Tech Community Leader:</strong> Volunteer for local community tech literacy programs, trained 100+ people in basic programming</li>
+                    <li class="mb-3"><strong>Blog & Tutorials:</strong> Published 20+ technical blog posts on Web Development and Python with 10K+ monthly readers</li>
+                    <li class="mb-3"><strong>Social Responsibility:</strong> Conducted free coding bootcamp for underprivileged students in collaboration with local NGOs</li>
+                  </ul>
                 </div>
               </div>
             </div>
